longhorn/longhorn-ingress.yaml
# longhorn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # Ingess namespace
  namespace: longhorn-system
  name: longhorn-ingress
  annotations:
    # trazi certifikat od cert managera
    cert-manager.io/cluster-issuer: "letsencrypt-cloudflare-issuer"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - longhorn.nhukovic.com
    secretName: longhorn-tls-secret # cert-manager ovo pravi
  rules:
  - host: "longhorn.nhukovic.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
